# stratafs

./: .gitignore  .golangci.yml  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  MiniLM-L6-v2.Q8_0.gguf  ONNX_INSTALL.md  README.md  SECURITY.md  SPECS.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  docs.yml  release.yml
cmd/agentfs/: main.go
cmd/stratafs/: main.go
desktop/agentfs-ui/: README.md  app.go  build.sh  go.mod  main.go  wails.json
desktop/stratafs-ui/: README.md  app.go  build.sh  go.mod  main.go  wails.json
docker/: config.json  prometheus.yml
docs/: DOCKER.md  INSTALLERS.md  api.md  architecture.md  configuration.md  deployment.md  development.md  roadmap.md  storage-backends.md
documentation/: README.md  mkdocs.yml  requirements.txt
documentation/docs/: index.md
installers/: README.md
installers/desktop/: agentfs-launcher.sh  agentfs-tray.py  agentfs.desktop  auto-updater.sh  org.agentfs.SearchProvider.ini  org.agentfs.SearchProvider.service  org.stratafs.SearchProvider.ini  org.stratafs.SearchProvider.service  stratafs-launcher.sh  stratafs-tray.py  stratafs.desktop
research/: Makefile  agentfs-paper.tex  stratafs-paper.tex
research/benchmarks/: Makefile  README.md  benchmark_ablation.py  benchmark_comparisons.py  benchmark_indexing.py  benchmark_latency.py  benchmark_search_quality.py  generate_latex.py  prepare_datasets.py  pyproject.toml  run_benchmarks.sh
scripts/: build-release.sh  get-onnx-runtime.sh  install.ps1  install.sh  release-bundle.sh  test-with-onnx.sh
(+136 files in other folders)
